Fix dark mode colors

--- a/src/Components/MoodHistory.css
+++ b/src/Components/MoodHistory.css
@@ -79,7 +79,7 @@
 
 
 .moodhistory.dark {
-    background-color: #1D267D;
+    background-color: #000B58;
     color: #f5f5f5;
     box-shadow: 0 0 0.2rem rgba(255, 255, 255, 0.4);
 }
